@startuml
title ORM Design - Library Management System

entity "User" as User {
  * user_name : Long <<PK>>
  --
  borrowedBooks : List<Book>
}

entity "Book" as Book {
  * id : String<<PK>>
  --
  bookName : String
  is_borrowed : Boolean  // available, borrowed

  borrowedBy : User
}

entity "BorrowedBooks" as BorrowedBooks {
  * id : Long <<PK>>
  --
  book : Book
  user : User
}

entity "Waitlist" as Waitlist {
  * id : Long <<PK>>
  --
   book : Book
   user : User
  position : Integer
}

' --- Relationships ---
User ||--o{ BorrowedBooks : borrows >
Book ||--o{ BorrowedBooks : is borrowed in >
User ||--o{ Waitlist : requests >
Book ||--o{ Waitlist : queued for >

@enduml
